# TaskRunner

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
examples/json/: comprehensive_example.json  env_var_example.json  external_task_example.json  file_task_example.json  http_get_task_example.json  log_task_example.json  wait_task_example.json
examples/yaml/: comprehensive_example.yaml  env_var_example.yaml  external_task_example.yaml  file_task_example.yaml  file_tasks.yaml  http_get_task_example.yaml  log_task_example.yaml  wait_task_example.yaml
external_plugins/: __init__.py  external_task.py  setup.py
taskrunner/: __init__.py  __main__.py  cli.py  core.py  plugin_base.py
taskrunner/models/: __init__.py  task_model.py
taskrunner/plugins/: __init__.py  file_task.py  http_get_task.py  log_task.py  wait_task.py
taskrunner/tasks/: __init__.py  executor.py
taskrunner/utils/: __init__.py  env_substitution.py  file_loader.py  plugin_discovery.py
tests/: test_env_substitution.py  test_executor.py  test_file_loader.py  test_file_task.py  test_http_get_task.py  test_log_task.py  test_plugin_discovery.py  test_task_model.py  test_wait_task.py
